--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-  -->
   <base href="/">
 
   <meta charset="UTF-8">
@@ -26,10 +17,12 @@
   <title>app</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
@@ -94,5 +87,23 @@
       loadMainDartJs();
     }
   </script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
+
+  <script>// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAwysOBhascWsiwthfL0qLalHWx6np7LRA",
+      authDomain: "die-zep.firebaseapp.com",
+      projectId: "die-zep",
+      storageBucket: "die-zep.appspot.com",
+      messagingSenderId: "521391018782",
+      appId: "1:521391018782:web:aaf4d146ab860f40346f0f",
+      measurementId: "G-PBCPKYV9C7"
+    };
+    firebase.initializeApp(firebaseConfig);
+
+  </script>
 </body>
+
 </html>
